// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<div
  class="wp-components-badge css-tvvhy6"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-badge css-1qf2rki"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render display 1`] = `
<div
  class="wp-components-badge css-1vvr3x3"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render isBold 1`] = `
<div
  class="wp-components-badge css-rz98o1"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-badge css-1llsgr5"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render truncate 1`] = `
<div
  class="wp-components-badge css-1qf2rki"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;
